--- a/tedu-blog-admin-ui/src/scss/_custom.scss
+++ b/tedu-blog-admin-ui/src/scss/_custom.scss
@@ -1,5 +1,7 @@
 // Here you can add other styles
-
+.hidden {
+  display: none;
+}
 // custom .chartjs-tooltip-body-item padding
 @import "charts";
 
